--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -3,15 +3,21 @@
 <%= link_to "Edit", edit_board_path(@board), class: "ui orange button" %>
 <%= link_to "Delete", @board, method: :delete, class: "ui red button" %>
 <hr/>
-<h2>Click List to View Tasks</h2>
-<% @board.lists.each do |list| %>
-    <%= list.list_priority %> | 
-    <%= link_to list.list_name, board_list_path(@board, list) %> 
-    <br />
-    <%= link_to "Edit ", edit_board_list_path(@board, list), class: "ui orange button small" %> <%= link_to "Delete", board_list_path(@board, list), method: :delete, class: "ui red button" %>
-<br />
-<br />
-<br />
+<h3>Click List to View Tasks</h3>
+<div class="ui cards">
+    <% @board.lists.each do |list| %>
+        <div class="card">
+            <div class="header"><h3><%= list.list_priority %> | 
+                 <%= link_to list.list_name, board_list_path(@board, list) %>
+            </h3>
+            <div class="two ui buttons">
+                <%= link_to "Edit ", edit_board_list_path(@board, list), class: "ui orange button small" %>
+                <%= link_to "Delete", board_list_path(@board, list), method: :delete, class: "ui red button" %>
+            </div>
+            </div>            
+        </div>
     <% end %>
-<hr/>
-<%= link_to "Add List to Board", new_board_list_path(@board) %></div>
+</div>
+
+<%= link_to "Add List to Board", new_board_list_path(@board) %>
+</div>
