--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,10 +1,10 @@
 <nav class="ui menu">
-  <div class="header item">  
+  <div class="left menu">  
     <%= link_to "Boards", boards_path, class: "item" %>
   </div>
-  <a class="item">
-  <%= link_to "Add Board", new_board_path, class: "item" %>
-  </a>
+  <div class="header item">
+    <h1>Welcome to Trollo</h1>
+    </div>
   <div class="right menu">
     <% if current_user %>
       <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "item" %>
