--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,11 +1,13 @@
-<%= form_with(model: [@board, @list], local: true, class: "ui form") do |f| %>
-  <div class="field">
-    <%= f.label :list_name %>
-    <%= f.text_field :list_name, class: "input" %>
-  </div>
+<form class="ui form">
+  <%= form_with(model: [@board, @list], local: true, class: "ui form") do |f| %>
     <div class="field">
-    <%= f.label :list_priority %>
-    <%= f.number_field :list_priority, class: "input" %>
-  </div>
- <%= f.submit nil, class: "ui blue button" %>
-<% end %>
+      <%= f.label :list_name %>
+      <%= f.text_field :list_name, class: "input" %>
+    </div>
+      <div class="field">
+      <%= f.label :list_priority %>
+      <%= f.number_field :list_priority, class: "input" %>
+    </div>
+  <%= f.submit nil, class: "ui blue button" %>
+  <% end %>
+</form>
